dic_DATA = \
	restrained.dic \
	restrained.1.dic \
	restrained.2.dic \
	restrained.3.dic \
	restrained.4.dic \
	restrained.5.dic \
	restrained.6.dic \
	restrained.7.dic \
	restrained.9.dic \
	katakana.dic \
	$(NULL)

dicdir = $(pkgdatadir)

EXTRA_DIST = \
	restrained.dic \
	restrained.1.dic \
	restrained.2.dic \
	restrained.3.dic \
	restrained.4.dic \
	restrained.5.dic \
	restrained.6.dic \
	restrained.7.dic \
	restrained.9.dic \
	katakana.dic \
	COPYING \
	$(NULL)
