pkgdatadir = get_option('prefix') / get_option('datadir') / meson.project_name()
dicdir = pkgdatadir / 'dic'

dic_files = [
  'katakana.dic',
  'permissible.dic',
  'restrained.1.dic',
  'restrained.2.dic',
  'restrained.3.dic',
  'restrained.4.dic',
  'restrained.5.dic',
  'restrained.6.dic',
  'restrained.7.dic',
  'restrained.8.dic',
  'restrained.9.dic',
]

install_data(dic_files, install_dir: dicdir)
