# Copyright (c) 2017-2021 Esrille Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

noinst_PYTHON = \
	dic.py \
	difference.py \
	hyougai.py \
	intersection.py \
	intersection-yomi.py \
	katakana.py \
	kigou.py \
	okuri.py \
	restrain.py \
	union.py \
	wago.py \
	yougen.py \
	zinmei.py \
	$(NULL)

noinst_SCRIPTS = \
	makedic \
	$(NULL)

EXTRA_DIST = \
	makedic \
	zyouyou-kanji.csv \
	basic.dic \
	drop.dic \
	huhyou.dic \
	greek.dic \
	kahen.dic \
	my.dic \
	tc2.compat.dic \
	zyosuusi.dic \
	$(NULL)
